# sonic-buildimage

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  AGENT.md  AGENTS.md  BUILD.bazel  CLAUDE.md  HANDOFF.md  MODULE.bazel  Makefile.cache  Makefile.work  README.md  WORKSPACE  build_orchagent.sh  cloudbuild-nightly.yaml  cloudbuild.yaml  demo.sh  handoff.md  process.md  slave.mk  sonic_image.bzl
.claude/: settings.auto.template.json  settings.json  settings.yolo.nested-docker.template.json  settings.yolo.template.json
acceptance/: BUILD.bazel  alpinevs.sh  broadcom_bin.sh  cloud_build.sh  vs_pytest.sh
apt/: BUILD.bazel  bookworm.lock.json  bookworm.yaml
dockers/: dockerfile-macros.j2
dockers/docker-basic_router/: BUILD.bazel
dockers/docker-dash-ha/: BUILD.bazel
dockers/docker-database/: BUILD.bazel
dockers/docker-dhcp-relay/: BUILD.bazel
dockers/docker-eventd/: BUILD.bazel
dockers/docker-fpm-frr/: BUILD.bazel
dockers/docker-fpm-gobgp/: BUILD.bazel
dockers/docker-gnmi-watchdog/: BUILD.bazel
dockers/docker-iccpd/: BUILD.bazel
dockers/docker-lldp/: BUILD.bazel
dockers/docker-macsec/: BUILD.bazel
dockers/docker-mux/: BUILD.bazel
dockers/docker-nat/: BUILD.bazel
dockers/docker-orchagent/: BUILD.bazel
dockers/docker-pde/: BUILD.bazel
dockers/docker-platform-monitor/: BUILD.bazel
dockers/docker-ptf-sai/: BUILD.bazel
dockers/docker-restapi-sidecar/: BUILD.bazel
dockers/docker-restapi-watchdog/: BUILD.bazel
dockers/docker-router-advertiser/: BUILD.bazel
dockers/docker-sflow/: BUILD.bazel
dockers/docker-snmp/: BUILD.bazel
dockers/docker-sonic-bmp/: BUILD.bazel
docs/: BAZEL_GAPS.md  BUILD_SYSTEM.md  CI_REMOTE_CACHE.md  DEMO_TALKING_POINTS.md  HERMETIC_VS_PLAN.md  MIGRATION_PLAN.md  NATIVE_BUILD_MIGRATION.md  PROGRESS.md  README_BAZEL.md  STATUS_REPORT.md  handoff.md  progress.md  removed_deps.md
files/: BUILD.bazel
files/Aboot/: BUILD.bazel
files/build_vars/: BUILD.bazel  database.json  dhcp_relay.json  fpm_frr.json  lldp.json  orchagent.json  platform_monitor.json  router_advertiser.json  snmp.json
files/dpkg/: 01_sonic_excludes  02_sonic_no_recommends  BUILD.bazel
files/rsyslog/: BUILD.bazel  rsyslog.conf
files/scripts/: BUILD.bazel
files/supervisord/: BUILD.bazel  base.conf  supervisord_env.conf
src/: BUILD.bazel
src/bash/: BUILD.bazel
src/dash-sai/: BUILD.bazel  Makefile
src/flashrom/: BUILD.bazel
src/gobgp/: BUILD.bazel
src/grpc/: BUILD.bazel
src/grub2/: BUILD.bazel
src/iccpd/: BUILD.bazel
src/ifupdown2/: BUILD.bazel
src/initramfs-tools/: BUILD.bazel
src/iptables/: BUILD.bazel
src/isc-dhcp/: BUILD.bazel
src/ixgbe/: BUILD.bazel
src/kdump-tools/: BUILD.bazel
src/libnl3/: BUILD.bazel
src/libpcre3/: BUILD.bazel
src/libteam/: BUILD.bazel
src/libyang/: BUILD.bazel
src/libyang3/: BUILD.bazel
src/libyang3-py3/: BUILD.bazel
src/lldpd/: BUILD.bazel
src/lm-sensors/: BUILD.bazel
src/makedumpfile/: BUILD.bazel
src/monit/: BUILD.bazel
src/mpdecimal/: BUILD.bazel
src/openssh/: BUILD.bazel
src/p4lang/: Makefile  p4lang-bmv2_1.15.0-7.dsc  p4lang-p4c_1.2.4.2-2.dsc  p4lang-pi_0.1.0-15.dsc
src/p4lang/p4lang-bmv2.patch/: fix-build-with-modern-toolchain.patch  series  trim-runtime-only-build.patch
src/p4lang/p4lang-p4c.patch/: trim-runtime-only-build.patch
src/p4lang/p4lang-pi.patch/: fix-jobserver-build.patch  series  trim-runtime-only-build.patch
src/protobuf/: BUILD.bazel
src/radius/: BUILD.bazel
src/rasdaemon/: BUILD.bazel
src/rdb-cli/: BUILD.bazel
src/redis/: BUILD.bazel
src/sflow/: BUILD.bazel
src/snmpd/: BUILD.bazel
src/socat/: BUILD.bazel  Makefile
src/sonic-bgpcfgd/: BUILD.bazel
src/sonic-bmpcfgd/: BUILD.bazel
src/sonic-build-hooks/hooks/: dget
src/sonic-build-hooks/scripts/: pre_run_buildinfo
src/sonic-config-engine/: BUILD.bazel  sonic-cfggen
src/sonic-containercfgd/: BUILD.bazel
src/sonic-ctrmgrd/: BUILD.bazel
src/sonic-ctrmgrd-rs/: BUILD.bazel
src/sonic-device-data/: BUILD.bazel  Makefile
src/sonic-dhcp-utilities/: BUILD.bazel
src/sonic-eventd/: BUILD.bazel
src/sonic-frr/: BUILD.bazel
src/sonic-frr-mgmt-framework/: BUILD.bazel
src/sonic-host-services-rs/: BUILD.bazel
src/sonic-nettools/: BUILD.bazel
src/sonic-p4rt/: BUILD.bazel
src/sonic-py-common/: BUILD.bazel
src/sonic-supervisord-utilities/: BUILD.bazel
src/sonic-supervisord-utilities-rs/: BUILD.bazel
src/sonic-sysmgr/: BUILD.bazel
src/sonic-yang-mgmt/: BUILD.bazel
src/sonic-yang-models/: BUILD.bazel
src/syslog-counter/: BUILD.bazel
src/system-health/: BUILD.bazel
src/systemd-sonic-generator/: BUILD.bazel
src/tacacs/: BUILD.bazel
src/thrift/: BUILD.bazel
src/wpasupplicant/: BUILD.bazel
toolchains/: BUILD.bazel
toolchains/cc/: BUILD.bazel  hello.cpp  sysroot.bzl
toolchains/gcc/: BUILD.bazel  gcc.bzl
toolchains/gcc/args/: BUILD.bazel
toolchains/gcc/tools/: BUILD.bazel
tools/: BUILD.bazel  debdiff_verify.sh  docker_run.sh  j2cli_wrapper.py  requirements_lock.txt  verify_reproducibility.sh
tools/bazel/: BUILD.bazel  bazelw  build_deb_package.sh  build_docker_archive.sh  build_legacy_artifact_bridge.sh  build_legacy_bridge_helper_image.sh  build_review_docker_archive.sh  build_rootfs_layer.sh  build_wheel_package.sh  configure_platform.sh  export_target_tree.sh  gzip_file.sh  init_workspace.sh  legacy_bridge_helper.Dockerfile  legacy_bridge_helper.apt.txt  legacy_bridge_helper_image_ref.sh  workspace_status.sh
tools/bazel/registry/: bazel_registry.json  generate_registry.py
tools/bazel/registry/modules/sonic_swss_common/: metadata.json
tools/ci/: BUILD.bazel  collect_artifact_inventory.py  collect_image_metrics.py  collect_installer_catalog.py  collect_nonhermetic_deps.py  collect_source_catalog.py  image_budgets.json  run_affected_targets.sh  run_image_metrics_check.sh  run_installer_catalog_check.sh  run_nightly_matrix.sh  run_repro_check.sh  run_source_catalog_check.sh  verify_legacy_bridge_constraints.sh  verify_no_egress.sh
tools/demo/: showcase_bazel_progress.sh
tools/submodules/: BUILD.bazel  manage_forks.py
(+226 files in other folders)
