"""Root BUILD file — exposes repo-wide targets."""

load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")
load("//:sonic_image.bzl", "sonic_platform_docker", "sonic_platform_image")

# Top-level repo config files exposed so acceptance/cloud_build.sh (a
# sandboxed sh_test) can find them in its runfiles.
exports_files([
    "cloudbuild.yaml",
    ".bazelrc",
])

# ── Platform-aware top-level targets ─────────────────────────────────────────
# Usage: bazel build //:sonic_image --platforms=//platforms:broadcom_amd64
sonic_platform_image(
    name = "sonic_image",
    visibility = ["//visibility:public"],
)

sonic_platform_docker(
    name = "docker_orchagent",
    visibility = ["//visibility:public"],
)

# ── buildifier ────────────────────────────────────────────────────────────────
# Format all BUILD/bzl files:  bazel run //:buildifier
buildifier(
    name = "buildifier",
    lint_mode = "warn",
    mode = "fix",
)

# Lint check for CI: bazel run //:buildifier_check
buildifier(
    name = "buildifier_check",
    lint_mode = "warn",
    mode = "check",
)
