"""SONiC Buildimage — Bazel bzlmod root module.

Hermetic build system using:
  - Pre-built GCC 12.5.0 toolchain (no host compiler dependency)
  - rules_distroless for Debian package resolution at fetch time
  - rules_oci for container image assembly
  - Pinned snapshot.debian.org mirrors for reproducibility
"""

module(
    name = "sonic_buildimage",
    version = "0.0.0",
    bazel_compatibility = [">=8.0.0"],
    compatibility_level = 1,
)

# ── Core ──────────────────────────────────────────────────────────────────────
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# ── Language rules ────────────────────────────────────────────────────────────
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "glog", version = "0.7.1")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.40.0")

# ── C/C++ foreign build systems (autotools, cmake) ───────────────────────────
bazel_dep(name = "rules_foreign_cc", version = "0.13.0")

# ── SONiC submodules (resolved via local registry) ───────────────────────────
bazel_dep(name = "sonic_swss_common", version = "0.0.0")

# ── OCI / container images ────────────────────────────────────────────────────
bazel_dep(name = "rules_oci", version = "2.0.0")

# ── Build utilities ───────────────────────────────────────────────────────────
bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")

# ── Distroless (Debian package resolution at fetch time) ─────────────────────
bazel_dep(name = "rules_distroless", version = "0.3.8")

# ── Hermetic LLVM/Clang 18 Toolchain (sonic-bazel pattern) ───────────────────
# Downloads hermetic Clang/LLVM, links against a Bookworm sysroot assembled
# from .deb packages extracted during bazel fetch. No host compiler needed.
bazel_dep(name = "toolchains_llvm", version = "1.7.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")

llvm.toolchain(
    name = "llvm_toolchain",
    llvm_versions = {
        "": "18.1.8",
        "darwin-x86_64": "15.0.7",
    },
    link_flags = {
        "": ["-Wl,-rpath,$ORIGIN/../lib", "-Wl,-rpath,$ORIGIN/../lib/x86_64-linux-gnu", "-lm"],
    },
    cxx_flags = {"": ["-std=c++17"]},
)

# Hermetic sysroot: .deb packages extracted during bazel fetch
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@bookworm_sysroot//:sysroot",
    targets = ["linux-x86_64"],
)

use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")

# Sysroot from Debian packages — all dev libraries for hermetic C++ builds
# NOTE: URLs from snapshot.debian.org/archive/debian/20260401T000000Z
_SNAPSHOT = "https://snapshot.debian.org/archive/debian/20260401T000000Z/pool/main"

_sysroot_repo = use_repo_rule("//toolchains/cc:sysroot.bzl", "debian_sysroot_repo")

_sysroot_repo(
    name = "bookworm_sysroot",
    packages = {
        # Core C/C++ toolchain
        "libc6-dev": [_SNAPSHOT + "/g/glibc/libc6-dev_2.36-9+deb12u13_amd64.deb"],
        "libc6": [_SNAPSHOT + "/g/glibc/libc6_2.36-9+deb12u13_amd64.deb"],
        "libgcc-12-dev": [_SNAPSHOT + "/g/gcc-12/libgcc-12-dev_12.2.0-14+deb12u1_amd64.deb"],
        "libstdc++-12-dev": [_SNAPSHOT + "/g/gcc-12/libstdc++-12-dev_12.2.0-14+deb12u1_amd64.deb"],
        "linux-libc-dev": [_SNAPSHOT + "/l/linux/linux-libc-dev_6.1.164-1_amd64.deb"],
        # Redis (swss-common)
        "libhiredis-dev": [_SNAPSHOT + "/h/hiredis/libhiredis-dev_0.14.1-3_amd64.deb"],
        "libhiredis0.14": [_SNAPSHOT + "/h/hiredis/libhiredis0.14_0.14.1-3_amd64.deb"],
        # Boost (swss-common) — bookworm defaults to 1.74
        "libboost-serialization-dev": [_SNAPSHOT + "/b/boost-defaults/libboost-serialization-dev_1.74.0.3_amd64.deb"],
        "libboost-serialization1.74-dev": [_SNAPSHOT + "/b/boost1.74/libboost-serialization1.74-dev_1.74.0+ds1-21_amd64.deb"],
        "libboost-serialization1.74.0": [_SNAPSHOT + "/b/boost1.74/libboost-serialization1.74.0_1.74.0+ds1-21_amd64.deb"],
        "libboost1.74-dev": [_SNAPSHOT + "/b/boost1.74/libboost1.74-dev_1.74.0+ds1-21_amd64.deb"],
        # ZMQ (swss-common)
        "libzmq3-dev": [_SNAPSHOT + "/z/zeromq3/libzmq3-dev_4.3.4-6_amd64.deb"],
        "libzmq5": [_SNAPSHOT + "/z/zeromq3/libzmq5_4.3.4-6_amd64.deb"],
        # Netlink (swss-common, swss)
        "libnl-3-dev": [_SNAPSHOT + "/libn/libnl3/libnl-3-dev_3.7.0-0.2+b1_amd64.deb"],
        "libnl-3-200": [_SNAPSHOT + "/libn/libnl3/libnl-3-200_3.7.0-0.2+b1_amd64.deb"],
        "libnl-genl-3-dev": [_SNAPSHOT + "/libn/libnl3/libnl-genl-3-dev_3.7.0-0.2+b1_amd64.deb"],
        "libnl-genl-3-200": [_SNAPSHOT + "/libn/libnl3/libnl-genl-3-200_3.7.0-0.2+b1_amd64.deb"],
        "libnl-route-3-dev": [_SNAPSHOT + "/libn/libnl3/libnl-route-3-dev_3.7.0-0.2+b1_amd64.deb"],
        "libnl-route-3-200": [_SNAPSHOT + "/libn/libnl3/libnl-route-3-200_3.7.0-0.2+b1_amd64.deb"],
        "libnl-nf-3-dev": [_SNAPSHOT + "/libn/libnl3/libnl-nf-3-dev_3.7.0-0.2+b1_amd64.deb"],
        # JSON (swss-common) — arch: all
        "nlohmann-json3-dev": [_SNAPSHOT + "/n/nlohmann-json3/nlohmann-json3-dev_3.11.2-2_all.deb"],
        # YANG (swss-common)
        "libyang2-dev": [_SNAPSHOT + "/liby/libyang2/libyang2-dev_2.1.30-2_amd64.deb"],
        "libyang2": [_SNAPSHOT + "/liby/libyang2/libyang2_2.1.30-2_amd64.deb"],
        # Protobuf (sairedis, dash-api)
        "libprotobuf-dev": [_SNAPSHOT + "/p/protobuf/libprotobuf-dev_3.21.12-3_amd64.deb"],
        "libprotobuf32": [_SNAPSHOT + "/p/protobuf/libprotobuf32_3.21.12-3_amd64.deb"],
        # Misc
        "uuid-dev": [_SNAPSHOT + "/u/util-linux/uuid-dev_2.38.1-5+deb12u3_amd64.deb"],
        "libjansson-dev": [_SNAPSHOT + "/j/jansson/libjansson-dev_2.14-2_amd64.deb"],
        "libjansson4": [_SNAPSHOT + "/j/jansson/libjansson4_2.14-2_amd64.deb"],
        "libjemalloc-dev": [_SNAPSHOT + "/j/jemalloc/libjemalloc-dev_5.3.0-1_amd64.deb"],
        "libjemalloc2": [_SNAPSHOT + "/j/jemalloc/libjemalloc2_5.3.0-1_amd64.deb"],
        # Team (swss)
        "libteam-dev": [_SNAPSHOT + "/libt/libteam/libteam-dev_1.31-1_amd64.deb"],
        "libteam5": [_SNAPSHOT + "/libt/libteam/libteam5_1.31-1_amd64.deb"],
        "libteamdctl0": [_SNAPSHOT + "/libt/libteam/libteamdctl0_1.31-1_amd64.deb"],
        # GTest (tests)
        "libgtest-dev": [_SNAPSHOT + "/g/googletest/libgtest-dev_1.12.1-0.2_amd64.deb"],
        "libgmock-dev": [_SNAPSHOT + "/g/googletest/libgmock-dev_1.12.1-0.2_amd64.deb"],
    },
)

# ── Submodule overlays (BUILD files for git submodules) ─────────────────────
# These repo rules expose submodule source directories to Bazel with BUILD
# files from build/overlays/. After `git submodule update --init`, the source
# lives in src/<mod>/ but has no BUILD.bazel (submodule forks own those files).
# The overlay provides a BUILD while keeping the submodule source untouched.
# Make rules in rules/*.mk remain present and unmodified.
_new_local_repo = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

_new_local_repo(
    name = "sonic_sairedis",
    build_file = "//build/overlays/sonic-sairedis:BUILD.overlay.bazel",
    path = "src/sonic-sairedis",
)

_new_local_repo(
    name = "sonic_swss",
    build_file = "//build/overlays/sonic-swss:BUILD.overlay.bazel",
    path = "src/sonic-swss",
)

_new_local_repo(
    name = "sonic_dash_api",
    build_file = "//build/overlays/sonic-dash-api:BUILD.overlay.bazel",
    path = "src/sonic-dash-api",
)

_new_local_repo(
    name = "sonic_stp",
    build_file = "//build/overlays/sonic-stp:BUILD.overlay.bazel",
    path = "src/sonic-stp",
)

# ── cppzmq headers — fetched at repository_rule time, NOT during build ────────
_cppzmq = use_repo_rule("//rules/bazel/deb:cppzmq_repo.bzl", "cppzmq_headers")

_cppzmq(name = "cppzmq")

# ── Hermetic builder Docker image (all build deps pre-installed) ──────────────
# Pre-installs all dpkg-buildpackage dependencies at fetch time so that
# deb_package_set genrules have zero network access during build actions.
# Per CLAUDE.md: "Network access only in repository_rules, never in build actions."
_builder_image = use_repo_rule("//rules/bazel/deb:builder_image_repo.bzl", "sonic_builder_image_repo")

_builder_image(
    name = "sonic_builder",
    base_image = "debian:bookworm-slim@sha256:4724b8cc51e33e398f0e2e15e18d5ec2851ff0c2280647e1310bc1642182655d",
    apt_snapshot = "https://snapshot.debian.org/archive/debian/20260401T000000Z",
    packages = [
        "build-essential", "dpkg-dev", "fakeroot", "debhelper", "cmake",
        "libnl-3-dev", "libnl-genl-3-dev", "libnl-route-3-dev", "libnl-nf-3-dev",
        "libhiredis-dev", "swig", "libgtest-dev", "libgmock-dev", "libboost-dev",
        "libboost-serialization-dev", "libzmq3-dev", "pkg-config",
        "dh-exec", "nlohmann-json3-dev", "python3-dev", "libprotobuf-dev",
        "protobuf-compiler", "autoconf", "automake", "libtool", "libyang2-dev",
        "curl", "uuid-dev", "ca-certificates", "libclang-dev", "clang",
        "autoconf-archive", "doxygen", "graphviz",
        "perl", "libxml-simple-perl", "git",
        "aspell", "aspell-en",
        "libjansson-dev", "libteam-dev", "libjemalloc-dev",
        "libssl-dev", "libelf-dev",
    ],
)

# ── FRR (Free Range Routing) packages — pinned from deb.frrouting.org ────────
# FRR is not in standard Debian repos (bookworm has 8.4.x, SONiC needs 10.x).
# Downloaded at fetch time with sha256 pins. No network at build time.
# Pool index: https://deb.frrouting.org/frr/pool/frr-stable/f/frr/
_FRR_POOL = "https://deb.frrouting.org/frr/pool/frr-stable/f/frr"

_frr_repo = use_repo_rule("//rules/bazel/deb:frr_repo.bzl", "frr_deb_repo")

_frr_repo(
    name = "frr",
    packages = {
        # FRR 10.6.0 for Debian 12 (bookworm) amd64 — frr-stable branch
        # To update: browse the pool index, download new .deb, compute sha256:
        #   curl -sL <url> | sha256sum
        "frr": [
            _FRR_POOL + "/frr_10.6.0-0~deb12u1_amd64.deb",
            "6b48510913aaea86c1b1f31fb06819d873ad069aba1efabb15b2420a45bced15",
        ],
        "frr-pythontools": [
            _FRR_POOL + "/frr-pythontools_10.6.0-0~deb12u1_all.deb",
            "f5f6c28517667b8739da763e8c67350a91540faf53a4364bfc3aeda2697dd143",
        ],
    },
)

# ── FRR runtime dependencies (hermetic, fetched at bazel-fetch time) ──────────
# These are shared libraries FRR links against that aren't resolved by
# rules_distroless (possibly renamed in 2026 snapshot due to t64 transition).
# Downloaded at fetch time with sha256 pins. No network at build time.
_runtime_deps_repo = use_repo_rule("//rules/bazel/deb:runtime_deps_repo.bzl", "runtime_deps_repo")

_runtime_deps_repo(
    name = "frr_runtime_deps",
    packages = {
        "libjson-c5": [
            _SNAPSHOT + "/j/json-c/libjson-c5_0.16-2_amd64.deb",
            "d0e1ed8637d1c26b9720f6057d6355f18378bba5cc2553e459d1632783c00d70",
        ],
        "libc-ares2": [
            _SNAPSHOT + "/c/c-ares/libc-ares2_1.18.1-3_amd64.deb",
            "087fd5c2ac883202e1786ab45617cdab7f77bc7f060d58cca177ddf6b6c3fa73",
        ],
        "libprotobuf-c1": [
            _SNAPSHOT + "/p/protobuf-c/libprotobuf-c1_1.4.1-1+b1_amd64.deb",
            "e99b3091938bfbd55b24e95587b868ba735e38e4adbcb9942c6993f2de3ba1bf",
        ],
    },
)

# libpython3.11 — shared library needed by SWIG-generated Python bindings
# (python3-swsscommon etc.). The libpython3.11-minimal from rules_distroless
# provides the interpreter, but the SWIG .so modules link against the shared
# library (libpython3.11.so.1.0) which is only in the full libpython3.11 pkg.
_runtime_deps_repo(
    name = "python_runtime_deps",
    packages = {
        "libpython3.11": [
            _SNAPSHOT + "/p/python3.11/libpython3.11_3.11.2-6+deb12u6_amd64.deb",
            "6a824827e991ff23555954a3496a4a49be660dcdd0e7dbb1dc80171782fbd463",
        ],
    },
)

# ── libpython3.11 shared library (SWIG bindings) ────────────────────────────
# http_file approach replaces the broken runtime_deps_repo layer.
# The deb is extracted hermetically via deb_extract_layer_hermetic in
# dockers/sonic-common-layer/BUILD.bazel.
_http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

_http_file(
    name = "libpython3_11_deb",
    url = _SNAPSHOT + "/p/python3.11/libpython3.11_3.11.2-6+deb12u6_amd64.deb",
    sha256 = "6a824827e991ff23555954a3496a4a49be660dcdd0e7dbb1dc80171782fbd463",
    downloaded_file_path = "libpython3.11.deb",
)

# ── phy-credo firmware (SONIC_ONLINE_DEBS equivalent) ────────────────────────

_http_file(
    name = "phy_credo",
    url = "https://github.com/aristanetworks/sonic-firmware/raw/24716c4e03f223d8e18afff786ac427f6ac77fe0/phy/phy-credo_1.0_amd64.deb",
    sha256 = "83d80954cde22ed16509aec22baeb36545d8cf486dc409755f325d5585004cce",
    downloaded_file_path = "phy-credo_1.0_amd64.deb",
)

# ── Broadcom SAI libraries (pre-built, from packages.trafficmanager.net) ─────
# These are proprietary binary packages used only for Gate 3 (sonic-broadcom.bin).
# Three ASIC families: XGS (Tomahawk), DNX (Jericho2), Legacy-TH.
# URLs and versions from platform/broadcom/sai-{xgs,dnx,legacy-th}.mk.
_SAI_PREFIX = "https://packages.trafficmanager.net/public/sai/sai-broadcom"

_http_file(
    name = "libsaibcm_xgs",
    url = _SAI_PREFIX + "/SAI_14.3.0_GA/14.3.0.0.0.0.3.0/xgs/libsaibcm_14.3.0.0.0.0.3.0_amd64.deb",
    sha256 = "edf3d123e3e64c50ab94002297da232ffc72e3003da5ed52644baa8bb94ad6d2",
    downloaded_file_path = "libsaibcm_14.3.0.0.0.0.3.0_amd64.deb",
)

_http_file(
    name = "libsaibcm_xgs_dev",
    url = _SAI_PREFIX + "/SAI_14.3.0_GA/14.3.0.0.0.0.3.0/xgs/libsaibcm-dev_14.3.0.0.0.0.3.0_amd64.deb",
    sha256 = "f8e188aac6764cc16f642f03392c1d4dc89d0510c7e52ab2121d59a30c716b2e",
    downloaded_file_path = "libsaibcm-dev_14.3.0.0.0.0.3.0_amd64.deb",
)

_http_file(
    name = "libsaibcm_dnx",
    url = _SAI_PREFIX + "/SAI_14.1.0_GA/14.1.0.1.0.0.13.1/dnx/libsaibcm_dnx_14.1.0.1.0.0.13.1_amd64.deb",
    sha256 = "4775c37a08e7d0158d80821e055075f10fbb12ee7c88e0d11c8452c3c58e84d9",
    downloaded_file_path = "libsaibcm_dnx_14.1.0.1.0.0.13.1_amd64.deb",
)

_http_file(
    name = "libsaibcm_legacy_th",
    url = _SAI_PREFIX + "/SAI_13.2.1_compat_OCP1.17.1/13.2.1.100/xgs/libsaibcm_13.2.1.100_amd64.deb",
    sha256 = "f8685aed6dfc87d3e589ac2b0cbf6347701ec2fdaa0d74ca2005755ac3d0c32a",
    downloaded_file_path = "libsaibcm_13.2.1.100_amd64.deb",
)

# Broadcom utility binaries
_http_file(
    name = "bcmcmd",
    url = "https://packages.trafficmanager.net/public/20190307/bcmcmd",
    sha256 = "cbbbd78fd0221a8c6eaca80bf51defdd4c9ab185aead725bd1ea10a0cb332bed",
    downloaded_file_path = "bcmcmd",
)

_http_file(
    name = "dsserve",
    url = "https://packages.trafficmanager.net/public/20190307/dsserve",
    sha256 = "34100d9c98ea00822a1e071cd49967e0a0cb4ed4b626305d9979ff81aaacd251",
    downloaded_file_path = "dsserve",
)

# ── Debian packages (hermetic, resolved at fetch time) ───────────────────────
# All runtime and build-time Debian packages resolved from pinned snapshots.
# No apt-get runs during build actions.
apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
apt.install(
    name = "bookworm",
    manifest = "//apt:bookworm.yaml",
)
use_repo(
    apt,
    "bookworm",
    "bookworm_adduser_3.134_amd64",
    "bookworm_arping_2.23-1_amd64",
    "bookworm_bridge-utils_1.7.1-1_amd64",
    "bookworm_comerr-dev_2.1-1.47.0-2-p-b2_amd64",
    "bookworm_conntrack_1-1.4.7-1-p-b2_amd64",
    "bookworm_dpkg_1.21.22_amd64",
    "bookworm_gcc-12-base_12.2.0-14-p-deb12u1_amd64",
    "bookworm_googletest_1.12.1-0.2_amd64",
    "bookworm_icu-devtools_72.1-3-p-deb12u1_amd64",
    "bookworm_init-system-helpers_1.65.2-p-deb12u1_amd64",
    "bookworm_iproute2_6.1.0-3_amd64",
    "bookworm_iptables_1.8.9-2_amd64",
    "bookworm_iputils-ping_3-20221126-1-p-deb12u1_amd64",
    "bookworm_jq_1.6-2.1-p-deb12u1_amd64",
    "bookworm_krb5-multidev_1.20.1-2-p-deb12u4_amd64",
    "bookworm_libacl1_2.3.1-3_amd64",
    "bookworm_libasan8_12.2.0-14-p-deb12u1_amd64",
    "bookworm_libatomic1_12.2.0-14-p-deb12u1_amd64",
    "bookworm_libaudit-common_1-3.0.9-1_amd64",
    "bookworm_libaudit1_1-3.0.9-1_amd64",
    "bookworm_libboost-dev_1.74.0.3_amd64",
    "bookworm_libboost-serialization-dev_1.74.0.3_amd64",
    "bookworm_libboost-serialization1.74-dev_1.74.0-p-ds1-21_amd64",
    "bookworm_libboost-serialization1.74.0_1.74.0-p-ds1-21_amd64",
    "bookworm_libboost1.74-dev_1.74.0-p-ds1-21_amd64",
    "bookworm_libbpf1_1-1.1.2-0-p-deb12u1_amd64",
    "bookworm_libbsd-dev_0.11.7-2_amd64",
    "bookworm_libbsd0_0.11.7-2_amd64",
    "bookworm_libbz2-1.0_1.0.8-5-p-b1_amd64",
    "bookworm_libc-dev-bin_2.36-9-p-deb12u13_amd64",
    "bookworm_libc6-dev_2.36-9-p-deb12u13_amd64",
    "bookworm_libc6_2.36-9-p-deb12u13_amd64",
    "bookworm_libcap-ng0_0.8.3-1-p-b3_amd64",
    "bookworm_libcap2-bin_1-2.66-4-p-deb12u2-p-b2_amd64",
    "bookworm_libcap2_1-2.66-4-p-deb12u2-p-b2_amd64",
    "bookworm_libcom-err2_1.47.0-2-p-b2_amd64",
    "bookworm_libcrypt-dev_1-4.4.33-2_amd64",
    "bookworm_libcrypt1_1-4.4.33-2_amd64",
    "bookworm_libdb5.3_5.3.28-p-dfsg2-1_amd64",
    "bookworm_libdbus-1-3_1.14.10-1_deb12u1_amd64",
    "bookworm_libelf-dev_0.188-2.1_amd64",
    "bookworm_libelf1_0.188-2.1_amd64",
    "bookworm_libestr0_0.1.11-1_amd64",
    "bookworm_libexpat1_2.5.0-1-p-deb12u2_amd64",
    "bookworm_libfastjson4_1.2304.0-1_amd64",
    "bookworm_libffi8_3.4.4-1_amd64",
    "bookworm_libgcc-12-dev_12.2.0-14-p-deb12u1_amd64",
    "bookworm_libgcc-s1_12.2.0-14-p-deb12u1_amd64",
    "bookworm_libgcrypt20_1.10.1-3_amd64",
    "bookworm_libgdbm-compat4_1.23-3_amd64",
    "bookworm_libgdbm6_1.23-3_amd64",
    "bookworm_libgmock-dev_1.12.1-0.2_amd64",
    "bookworm_libgomp1_12.2.0-14-p-deb12u1_amd64",
    "bookworm_libgpg-error0_1.46-1_amd64",
    "bookworm_libgssapi-krb5-2_1.20.1-2-p-deb12u4_amd64",
    "bookworm_libgssrpc4_1.20.1-2-p-deb12u4_amd64",
    "bookworm_libgtest-dev_1.12.1-0.2_amd64",
    "bookworm_libhiredis-dev_0.14.1-3_amd64",
    "bookworm_libhiredis0.14_0.14.1-3_amd64",
    "bookworm_libicu-dev_72.1-3-p-deb12u1_amd64",
    "bookworm_libicu72_72.1-3-p-deb12u1_amd64",
    "bookworm_libidn2-0_2.3.3-1-p-b1_amd64",
    "bookworm_libip4tc2_1.8.9-2_amd64",
    "bookworm_libip6tc2_1.8.9-2_amd64",
    "bookworm_libitm1_12.2.0-14-p-deb12u1_amd64",
    "bookworm_libjansson-dev_2.14-2_amd64",
    "bookworm_libjansson4_2.14-2_amd64",
    "bookworm_libjemalloc-dev_5.3.0-1_amd64",
    "bookworm_libjemalloc2_5.3.0-1_amd64",
    "bookworm_libjq1_1.6-2.1-p-deb12u1_amd64",
    "bookworm_libk5crypto3_1.20.1-2-p-deb12u4_amd64",
    "bookworm_libkadm5clnt-mit12_1.20.1-2-p-deb12u4_amd64",
    "bookworm_libkadm5srv-mit12_1.20.1-2-p-deb12u4_amd64",
    "bookworm_libkdb5-10_1.20.1-2-p-deb12u4_amd64",
    "bookworm_libkeyutils1_1.6.3-2_amd64",
    "bookworm_libkrb5-3_1.20.1-2-p-deb12u4_amd64",
    "bookworm_libkrb5-dev_1.20.1-2-p-deb12u4_amd64",
    "bookworm_libkrb5support0_1.20.1-2-p-deb12u4_amd64",
    "bookworm_liblognorm5_2.0.6-4_amd64",
    "bookworm_liblsan0_12.2.0-14-p-deb12u1_amd64",
    "bookworm_liblz4-1_1.9.4-1_amd64",
    "bookworm_liblzf1_3.6-3_amd64",
    "bookworm_liblzma5_5.4.1-1_amd64",
    "bookworm_libmd-dev_1.0.4-2_amd64",
    "bookworm_libmd0_1.0.4-2_amd64",
    "bookworm_libmnl0_1.0.4-3_amd64",
    "bookworm_libncursesw6_6.4-4_amd64",
    "bookworm_libnet1_1.1.6-p-dfsg-3.2_amd64",
    "bookworm_libnetfilter-conntrack3_1.0.9-3_amd64",
    "bookworm_libnfnetlink0_1.0.2-2_amd64",
    "bookworm_libnftnl11_1.2.4-2_amd64",
    "bookworm_libnl-3-200_3.7.0-0.2-p-b1_amd64",
    "bookworm_libnl-3-dev_3.7.0-0.2-p-b1_amd64",
    "bookworm_libnl-cli-3-200_3.7.0-0.2-p-b1_amd64",
    "bookworm_libnl-genl-3-200_3.7.0-0.2-p-b1_amd64",
    "bookworm_libnl-genl-3-dev_3.7.0-0.2-p-b1_amd64",
    "bookworm_libnl-nf-3-200_3.7.0-0.2-p-b1_amd64",
    "bookworm_libnl-nf-3-dev_3.7.0-0.2-p-b1_amd64",
    "bookworm_libnl-route-3-200_3.7.0-0.2-p-b1_amd64",
    "bookworm_libnl-route-3-dev_3.7.0-0.2-p-b1_amd64",
    "bookworm_libnorm-dev_1.5.9-p-dfsg-2_amd64",
    "bookworm_libnorm1_1.5.9-p-dfsg-2_amd64",
    "bookworm_libnsl-dev_1.3.0-2_amd64",
    "bookworm_libnsl2_1.3.0-2_amd64",
    "bookworm_libonig5_6.9.8-1_amd64",
    "bookworm_libpam-modules-bin_1.5.2-6-p-deb12u2_amd64",
    "bookworm_libpam-modules_1.5.2-6-p-deb12u2_amd64",
    "bookworm_libpam0g_1.5.2-6-p-deb12u2_amd64",
    "bookworm_libpcap0.8_1.10.3-1_amd64",
    "bookworm_libpcre2-16-0_10.42-1_amd64",
    "bookworm_libpcre2-32-0_10.42-1_amd64",
    "bookworm_libpcre2-8-0_10.42-1_amd64",
    "bookworm_libpcre2-dev_10.42-1_amd64",
    "bookworm_libpcre2-posix3_10.42-1_amd64",
    "bookworm_libpcre3_2-8.39-15_amd64",
    "bookworm_libperl5.36_5.36.0-7-p-deb12u3_amd64",
    "bookworm_libpgm-5.3-0_5.3.128_dfsg-2_amd64",
    "bookworm_libpgm-dev_5.3.128_dfsg-2_amd64",
    "bookworm_libproc2-0_2-4.0.2-3_amd64",
    "bookworm_libprotobuf-dev_3.21.12-3_amd64",
    "bookworm_libprotobuf-lite32_3.21.12-3_amd64",
    "bookworm_libprotobuf32_3.21.12-3_amd64",
    "bookworm_libprotoc32_3.21.12-3_amd64",
    "bookworm_libpython3-stdlib_3.11.2-1-p-b1_amd64",
    "bookworm_libpython3.11-minimal_3.11.2-6-p-deb12u6_amd64",
    "bookworm_libpython3.11-stdlib_3.11.2-6-p-deb12u6_amd64",
    "bookworm_libquadmath0_12.2.0-14-p-deb12u1_amd64",
    "bookworm_libreadline8_8.2-1.3_amd64",
    "bookworm_libseccomp2_2.5.4-1-p-deb12u1_amd64",
    "bookworm_libselinux1_3.4-1-p-b6_amd64",
    "bookworm_libsemanage-common_3.4-1_amd64",
    "bookworm_libsemanage2_3.4-1-p-b5_amd64",
    "bookworm_libsepol2_3.4-2.1_amd64",
    "bookworm_libsodium-dev_1.0.18-1-p-deb12u1_amd64",
    "bookworm_libsodium23_1.0.18-1-p-deb12u1_amd64",
    "bookworm_libsqlite3-0_3.40.1-2-p-deb12u2_amd64",
    "bookworm_libssl-dev_3.0.18-1_deb12u2_amd64",
    "bookworm_libssl3_3.0.18-1_deb12u2_amd64",
    "bookworm_libstdc-p--p--12-dev_12.2.0-14-p-deb12u1_amd64",
    "bookworm_libstdc-p--p-6_12.2.0-14-p-deb12u1_amd64",
    "bookworm_libsystemd0_252.39-1_deb12u1_amd64",
    "bookworm_libteam-dev_1.31-1_amd64",
    "bookworm_libteam5_1.31-1_amd64",
    "bookworm_libteamdctl0_1.31-1_amd64",
    "bookworm_libtinfo6_6.4-4_amd64",
    "bookworm_libtirpc-common_1.3.3-p-ds-1_amd64",
    "bookworm_libtirpc-dev_1.3.3-p-ds-1_amd64",
    "bookworm_libtirpc3_1.3.3-p-ds-1_amd64",
    "bookworm_libtsan2_12.2.0-14-p-deb12u1_amd64",
    "bookworm_libubsan1_12.2.0-14-p-deb12u1_amd64",
    "bookworm_libunistring2_1.0-2_amd64",
    "bookworm_libuuid1_2.38.1-5-p-deb12u3_amd64",
    "bookworm_libxml2-dev_2.9.14-p-dfsg-1.3_deb12u5_amd64",
    "bookworm_libxml2_2.9.14-p-dfsg-1.3_deb12u5_amd64",
    "bookworm_libxtables12_1.8.9-2_amd64",
    "bookworm_libyaml-0-2_0.2.5-1_amd64",
    "bookworm_libyang2-dev_2.1.30-2_amd64",
    "bookworm_libyang2_2.1.30-2_amd64",
    "bookworm_libzmq3-dev_4.3.4-6_amd64",
    "bookworm_libzmq5_4.3.4-6_amd64",
    "bookworm_libzstd1_1.5.4-p-dfsg2-5_amd64",
    "bookworm_linux-libc-dev_6.1.164-1_amd64",
    "bookworm_lsb-base_11.6_amd64",
    "bookworm_ndisc6_1.0.5-1-p-b2_amd64",
    "bookworm_netbase_6.4_amd64",
    "bookworm_nlohmann-json3-dev_3.11.2-2_amd64",
    "bookworm_passwd_1-4.13-p-dfsg1-1-p-deb12u2_amd64",
    "bookworm_perl-base_5.36.0-7-p-deb12u3_amd64",
    "bookworm_perl-modules-5.36_5.36.0-7-p-deb12u3_amd64",
    "bookworm_perl_5.36.0-7-p-deb12u3_amd64",
    "bookworm_procps_2-4.0.2-3_amd64",
    "bookworm_protobuf-compiler_3.21.12-3_amd64",
    "bookworm_python3-minimal_3.11.2-1-p-b1_amd64",
    "bookworm_python3-netifaces_0.11.0-2-p-b1_amd64",
    "bookworm_python3-protobuf_3.21.12-3_amd64",
    "bookworm_python3-yaml_6.0-3-p-b2_amd64",
    "bookworm_python3.11-minimal_3.11.2-6-p-deb12u6_amd64",
    "bookworm_python3.11_3.11.2-6-p-deb12u6_amd64",
    "bookworm_python3_3.11.2-1-p-b1_amd64",
    "bookworm_readline-common_8.2-1.3_amd64",
    "bookworm_redis-server_5-7.0.15-1_deb12u6_amd64",
    "bookworm_redis-tools_5-7.0.15-1_deb12u6_amd64",
    "bookworm_resolve",
    "bookworm_rpcsvc-proto_1.4.3-1_amd64",
    "bookworm_rsyslog_8.2302.0-1-p-deb12u1_amd64",
    "bookworm_sgml-base_1.31_amd64",
    "bookworm_sysvinit-utils_3.06-4_amd64",
    "bookworm_tar_1.34-p-dfsg-1.2-p-deb12u1_amd64",
    "bookworm_tcpdump_4.99.3-1_amd64",
    "bookworm_uuid-dev_2.38.1-5-p-deb12u3_amd64",
    "bookworm_zlib1g-dev_1-1.2.13.dfsg-1_amd64",
)


# ── Python toolchain ─────────────────────────────────────────────────────────
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_3_11", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "sonic_pip",
    python_version = "3.11",
    requirements_lock = "//tools:requirements_lock.txt",
)
use_repo(pip, "sonic_pip")

# ── Go toolchain ──────────────────────────────────────────────────────────────
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.3")

# ── OCI base image pulls (pinned by digest) ──────────────────────────────────
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base_debian12",
    digest = "sha256:937c7eaaf6f3f2d38a1f8c4aeff326f0c56e4593ea152e9e8f74d976dde52f56",
    image = "gcr.io/distroless/base-debian12",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_base_debian12")
oci.pull(
    name = "debian_bookworm_slim",
    digest = "sha256:f06537653ac770703bc45b4b113475bd402f451e85223f0f2837acbf89ab020a",
    image = "index.docker.io/library/debian",
    platforms = ["linux/amd64"],
)
use_repo(oci, "debian_bookworm_slim", "debian_bookworm_slim_linux_amd64", "distroless_base_debian12_linux_amd64")
