package(default_visibility = ["//visibility:public"])

filegroup(
    name = "redis_dump_load_review_srcs",
    srcs = [
        "redis-dump-load/LICENSE",
        "redis-dump-load/README.rst",
        "redis-dump-load/redisdl.py",
        "redis-dump-load/setup.py",
    ],
)

filegroup(
    name = "scapy_review_srcs",
    srcs = glob([
        "scapy/LICENSE",
        "scapy/MANIFEST.in",
        "scapy/README",
        "scapy/README.md",
        "scapy/doc/scapy.1",
        "scapy/scapy/**",
        "scapy/setup.cfg",
        "scapy/setup.py",
    ]),
)

filegroup(
    name = "sonic_py_common_review_srcs",
    srcs = glob([
        "sonic-py-common/setup.cfg",
        "sonic-py-common/setup.py",
        "sonic-py-common/sonic_py_common/**",
    ]),
)

filegroup(
    name = "sonic_config_engine_review_srcs",
    srcs = glob(
        ["sonic-config-engine/**"],
        exclude = [
            "sonic-config-engine/**/__pycache__/**",
            "sonic-config-engine/**/*.pyc",
            "sonic-config-engine/BUILD",
            "sonic-config-engine/BUILD.bazel",
        ],
    ),
)
